# DomesdayDuplicator

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: build-binaries.yml  tests.yml
DE0-NANO/: .gitignore
DE0-NANO/DomesdayDuplicator/: .gitignore  DomesdayDuplicator.SDC  DomesdayDuplicator.SDC.bak  DomesdayDuplicator.cdf  DomesdayDuplicator.cof  DomesdayDuplicator.done  DomesdayDuplicator.fit.summary  DomesdayDuplicator.jdi  DomesdayDuplicator.map.smsg  DomesdayDuplicator.map.summary  DomesdayDuplicator.pin  DomesdayDuplicator.qpf  DomesdayDuplicator.qsf  DomesdayDuplicator.qws  DomesdayDuplicator.sdc  DomesdayDuplicator.sof  DomesdayDuplicator.sta.summary  DomesdayDuplicator.v  DomesdayDuplicator.v.bak  DomesdayDuplicator_assignment_defaults.qdf  DomesdayDuplicator_write_jic.cdf  IPfifo.qip  IPfifo.v  IPfifo_bb.v  IPpllGenerator.ppf  IPpllGenerator.qip  IPpllGenerator.v  IPpllGenerator_bb.v  adcDataConvert.v  buffer.v  convertTenToSixteenBits.v  dataGenerator.v  domesdayDuplicatorQSys.qsys  domesdayDuplicatorQSys.sopcinfo  fifo.v  fx3StateMachine.v  ntscPll.ppf  ntscPll.qip  ntscPll.v  ntscPll_bb.v  (+7 more)
DE0-NANO/DomesdayDuplicator/db/: .cmp.kpt  .ipregen.qmsg  DomesdayDuplicator.(0).cnf.cdb  DomesdayDuplicator.(0).cnf.hdb  DomesdayDuplicator.(1).cnf.cdb  DomesdayDuplicator.(1).cnf.hdb  DomesdayDuplicator.(10).cnf.cdb  DomesdayDuplicator.(10).cnf.hdb  DomesdayDuplicator.(11).cnf.cdb  DomesdayDuplicator.(11).cnf.hdb  DomesdayDuplicator.(12).cnf.cdb  DomesdayDuplicator.(12).cnf.hdb  DomesdayDuplicator.(13).cnf.cdb  (+267 more)
Documentation/: DdD Gain and filter calculations.xlsx
FX3-Firmware/: .gitignore
FX3-Firmware/domesdayDuplicator/: .cproject  .gitignore  .project  HOWTO-COMPILE.txt  cyfx_gcc_startup.S  cyfxtx.c  domesdayDuplicator.c  domesdayDuplicator.h  domesdayDuplicatorGpif.h  makefile  usbDescriptor.c
Graphics/: Domesday Duplicator Application logo.ai  Domesday Duplicator logo colour.ai  Domesday Duplicator logo.ai
KiCAD/Domesday Duplicator/: ADC.sch  Domesday Duplicator-cache.lib  Domesday Duplicator-rescue.lib  Domesday Duplicator.kicad_pcb  Domesday Duplicator.pro  Domesday Duplicator.sch  Power Supply.sch  RF Amplifier.sch  ads825.lib  bnc_rosenberger.lib  de0-nano_gpio.lib  fp-lib-table  gpifii_j6.lib  gpifii_j7.lib  opa690.lib  superspeedinf.sch
KiCAD/Gerber/: Domesday Duplicator-B.Cu.gbr  Domesday Duplicator-B.Mask.gbr  Domesday Duplicator-B.SilkS.gbr  Domesday Duplicator-Edge.Cuts.gbr  Domesday Duplicator-F.Cu.gbr  Domesday Duplicator-F.Mask.gbr  Domesday Duplicator-F.SilkS.gbr  Domesday Duplicator.drl
Linux-Application/: .gitignore  CMakeLists.txt  ddd-tools.pro
Linux-Application/DomesdayDuplicator/: .editorconfig  .gitignore  CMakeLists.txt  DomesdayDuplicator.pro  ILogger.h  ILogger.inl  QtLogger.cpp  QtLogger.h  StringUtilities.h  StringUtilities.inl  UsbDeviceBase.cpp  UsbDeviceBase.h  UsbDeviceLibUsb.cpp  UsbDeviceLibUsb.h  UsbDeviceWinUsb.cpp  UsbDeviceWinUsb.h  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  advancednamingdialog.cpp  advancednamingdialog.h  advancednamingdialog.ui  amplitudemeasurement.cpp  amplitudemeasurement.h  automaticcapturedialog.cpp  automaticcapturedialog.h  automaticcapturedialog.ui  configuration.cpp  configuration.h  configurationdialog.cpp  configurationdialog.h  configurationdialog.ui  domesdayduplicator.cpp  domesdayduplicator.h  domesdayduplicator.ui  images.qrc  lvdpcontrol.cpp  lvdpcontrol.h  main.cpp  mainwindow.cpp  (+26 more)
Linux-Application/DomesdayDuplicator/QtUsb/: qbaseusb.cpp  qbaseusb.h  qlibusb.cpp  qlibusb.h  qusb.h  qusb_compat.h  qusbbulktransfer.cpp  qusbbulktransfer.h  qusbmanager.cpp  qusbmanager.h
Linux-Application/DomesdayDuplicator/cmake_modules/: FindLibUSB.cmake
Linux-Application/LaserDiscAnalyser/: .gitignore  LaserDiscAnalyser.pro  about.cpp  about.h  about.ui  analysetestdata.cpp  analysetestdata.h  fileconverter.cpp  fileconverter.h  inputsample.cpp  inputsample.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  progressdialog.cpp  progressdialog.h  progressdialog.ui  rfsample.cpp  rfsample.h  sampledetails.cpp  sampledetails.h
Linux-Application/cyusb_linux_1.0.4/: README  install.sh
Linux-Application/cyusb_linux_1.0.4/configs/: 88-cyusb.rules  cy_renumerate.sh  cyusb.conf
Linux-Application/cyusb_linux_1.0.4/fx2_images/: CYStream.hex  Fx2LP_C0.hex  Fx2LP_C0.iic  Vend_Ax.hex  bulkext.hex  bulkloop.hex  bulkloop.iic  bulksrc.hex  bulksrc.iic  dev_io.hex  download.hex  memtest.hex
Linux-Application/cyusb_linux_1.0.4/fx3_images/: cyfxbulklpautoenum.img  cyfxbulklpautoenum.txt  cyfxbulksrcsink.txt  cyfxbulksrcsink_iic.img  cyfxflashprog.txt  cyfxisolpauto.img  cyfxisolpauto.txt  cyfxisolpmaninout.img  cyfxisolpmaninout.txt  cyfxisosrcsink.img  cyfxisosrcsink.txt
Linux-Application/cyusb_linux_1.0.4/gui_src/: controlcenter.cpp  controlcenter.pro  controlcenter.ui  cyusbd.c  fx2_download.cpp  fx3_download.cpp  fx3_i2ctest.cpp  fx3_imgdump.c  fx3_spitest.cpp  fx3_test.cpp  main.cpp
Linux-Application/cyusb_linux_1.0.4/include/: controlcenter.h  cyusb.h
Linux-Application/cyusb_linux_1.0.4/lib/: libcyusb.c  libcyusb.so.1
Linux-Application/cyusb_linux_1.0.4/src/: 00_fwload.c  01_getdesc.c  03_getconfig.c  04_kerneldriver.c  05_claiminterface.c  06_setalternate.c  07_bulkreader.c  07_bulkwriter.c  08_cybulk.c  config_parser.c  cyisoread_sample.c  cyisowrite_sample.c  cyusbd.c  download_fx2.c  download_fx3.c  getconfig.c
Linux-Application/cyusb_linux_1.0.4/test_cases/: README  create.c
Linux-Application/dddanalyse/: .gitignore  dddanalyse  dddanalyse.cpp  dddanalyse.h  dddanalyse.pro  main.cpp
Linux-Application/dddconv/: CMakeLists.txt  dataconversion.cpp  dataconversion.h  dddconv.pro  main.cpp
Linux-Application/dddutil/: .gitignore  CMakeLists.txt  about.cpp  about.h  about.ui  analysetestdata.cpp  analysetestdata.h  dddutil.pro  fileconverter.cpp  fileconverter.h  inputsample.cpp  inputsample.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  progressdialog.cpp  progressdialog.h  sampledetails.cpp  sampledetails.h
(+66 files in other folders)
